crates/math-core/src/snapshots/math_core__lexer__tests__disallowed_chars.snap
---
source: crates/math-core/src/lexer.rs
expression: "\\begin{matrix x + y}"
---
Error: Disallowed character in text group: '+'.
   ╭─[ <input>:1:17 ]
   │
 1 │ \begin{matrix x + y}
   │                 ┬  
   │                 ╰── disallowed character
───╯
